invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_7.src
.IPPcode24
ADD GF@e int bool@false